# rust_minimax_proxy

./: .gitignore  Cargo.toml  README.md  architecture_decisions.md  first.sh  guide.md  loop_engineering.md  requirements.txt  run_app.sh  test_client.py
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: agentGraph.js  agentGraph.test.mjs  main.jsx  styles.css
docs/goals/: 2026-06-07-1953-rust-minimax-proxy-goal-engineering-skill-goal.md  2026-06-07-1953-rust-minimax-proxy-goal-engineering-skill-rider.md  2026-06-07-1957-rust-minimax-proxy-test-workspace-policy-goal.md  2026-06-07-1957-rust-minimax-proxy-test-workspace-policy-rider.md  2026-06-07-2001-rust-minimax-proxy-copilotkit-react-chat-goal.md  2026-06-07-2001-rust-minimax-proxy-copilotkit-react-chat-rider.md  2026-06-07-2010-rust-minimax-proxy-readme-and-launcher-cleanup-goal.md  2026-06-07-2010-rust-minimax-proxy-readme-and-launcher-cleanup-rider.md  2026-06-08-1007-rust-minimax-proxy-copilotkit-helper-skill-goal.md  2026-06-08-1007-rust-minimax-proxy-copilotkit-helper-skill-rider.md  2026-06-08-1556-rust-minimax-proxy-langgraph-prd-plan-goal.md  2026-06-08-1556-rust-minimax-proxy-langgraph-prd-plan-rider.md  2026-06-08-1607-rust-minimax-proxy-agent-trace-ui-goal.md  2026-06-08-1607-rust-minimax-proxy-agent-trace-ui-rider.md  2026-06-08-1616-rust-minimax-proxy-agent-trace-in-conversation-goal.md  2026-06-08-1616-rust-minimax-proxy-agent-trace-in-conversation-rider.md  (+12 more)
jobs_scraper/: __init__.py  cv.json  service.py  unjobnet.py
jobs_scraper/tests/: test_unjobnet.py
src/: main.rs
(+5 files in other folders)
